--- a/index-en.html
+++ b/index-en.html
@@ -64,17 +64,17 @@
                     <!-- OPTION 1, SIMPLE LIST -->
                     <ul class="simple-list">
                         <li>
-                            <a type="button" href="/index-en.html#intro" onclick="dismissModal(event)" >Psychological counselling
+                            <a type="button" href="/index-en.html#intro" >Psychological counselling
                             </a>
                         </li>
                         <li>
                             <a type="button" href="/tematiche-en.html#tematiche">Topics</a>
                         </li>
                         <li>
-                            <a type="button" href="/index-en.html#about" onclick="dismissModal(event)">About me</a>
+                            <a type="button" href="/index-en.html#about">About me</a>
                         </li>
                         <li>
-                            <a type="button" href="/index-en.html#contatti" class="btn btn-primary" onclick="dismissModal(event)" >Contact me</a>
+                            <a type="button" href="/index-en.html#contatti" class="btn btn-primary" >Contact me</a>
                         </li>
                     </ul>
                 </div>
