--- a/tematiche.html
+++ b/tematiche.html
@@ -67,7 +67,7 @@
                             <a href="index.html#intro">Consulenza psicologica</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="/tematiche.html#tematiche">Tematiche</a>
+                            <a href="/tematiche.html#tematiche" data-bs-dismiss="modal">Tematiche</a>
                         </li>
                         <li>
                             <a href="/index.html#about">Chi sono</a>
