--- a/index-en.html
+++ b/index-en.html
@@ -57,24 +57,24 @@
                     <div class="logo-squared">
                         <img src="./assets/logo-squared.png" alt="logo-squared">
                     </div>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close" id="close-modal-btn" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <!-- MENU CONTENT -->
                 <div class="modal-body">
                     <!-- OPTION 1, SIMPLE LIST -->
                     <ul class="simple-list">
                         <li>
-                            <a type="button" href="/index-en.html#intro" >Psychological counselling
+                            <a type="button" href="#intro" >Psychological counselling
                             </a>
                         </li>
                         <li>
                             <a type="button" href="/tematiche-en.html#tematiche">Topics</a>
                         </li>
                         <li>
-                            <a type="button" href="/index-en.html#about">About me</a>
+                            <a type="button" href="#about">About me</a>
                         </li>
                         <li>
-                            <a type="button" href="/index-en.html#contatti" class="btn btn-primary" >Contact me</a>
+                            <a type="button" href="#contatti" class="btn btn-primary" >Contact me</a>
                         </li>
                     </ul>
                 </div>
@@ -771,11 +771,16 @@
         }
     </script>
     <script>
-        function dismissModal(event) {
-          event.preventDefault();
-          $('#mobile-menu').modal('hide');
-        }
-        </script>
+        const links = document.querySelectorAll('#mobile-menu a[href^="#"]'); // Select all links with href starting with #
+        links.forEach(function(link) { // Loop through each link
+            link.addEventListener('click', function() { // Add a click event listener to the link
+                const modalCloseBtn = document.querySelector('#close-modal-btn'); // Select the modal
+                setTimeout(() => {
+                    modalCloseBtn.click();;
+                    }, "1000")
+            });
+        });
+    </script>
 
 </body>
 </html>
