--- a/tematiche-en.html
+++ b/tematiche-en.html
@@ -98,7 +98,7 @@
                     </button>
 				</div>
 				<div class="modal-body">
-					<iframe src="/assets/infographics/sleep.pdf&embedded=true" style="width: 100%; height: 100%;"></iframe>
+					<iframe src="/assets/infographics/sleep.pdf" style="width: 100%; height: 100%;"></iframe>
 				</div>
 				<div class="modal-footer">
 					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
@@ -118,7 +118,7 @@
                     </button>
 				</div>
 				<div class="modal-body">
-					<iframe src="/assets/infographics/breathing.pdf&embedded=true" style="width: 100%; height: 100%;"></iframe>
+					<iframe src="/assets/infographics/breathing.pdf" style="width: 100%; height: 100%;"></iframe>
 				</div>
 				<div class="modal-footer">
 					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
@@ -138,7 +138,7 @@
                     </button>
 				</div>
 				<div class="modal-body">
-					<iframe src="/assets/infographics/orientation.pdf&embedded=true" style="width: 100%; height: 100%;"></iframe>
+					<iframe src="/assets/infographics/orientation.pdf" style="width: 100%; height: 100%;"></iframe>
 				</div>
 				<div class="modal-footer">
 					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
