--- a/tematiche-en.html
+++ b/tematiche-en.html
@@ -219,7 +219,7 @@
                         <!-- DESKTOP NAVBAR -->
                         <div class="left">
                             <li>
-                                <a href="index.html">
+                                <a href="index-en.html">
                                     <img src="./assets/logo.png" alt="logo" id="logo-nav">
                                 </a>
                             </li>
@@ -230,7 +230,7 @@
                                 <a href="#tematiche">Topics</a>
                             </li>
                             <li>
-                                <a href="index.html#about">About</a>
+                                <a href="index-en.html#about">About</a>
                             </li>
                         </div>
                         <div class="right">
