added blog page, blog folder and articles

--- a/tematiche.html
+++ b/tematiche.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dott.ssa  Aurora Belfanti, Psicologa a Trento</title>
+    <meta name="description" content="Cerchi una psicologa a Trento e Trentino per parlare di sessualità, genere, famiglia, lavoro, genitorialità o scuola? Sono qui per te. Offro servizi di supporto psicologico personalizzato per adulti, adolescenti e studenti in italiano, inglese ed altre lingue straniere. Questa sezione del sito contiene informationi ed articoli relativi a pratiche psicologiche e suggerimenti, spunti di lettura, per consoscersi meglio.">
+    <meta name="keywords" content="Psicologa a Trento, Psicologa in Trentino, Sessualità, Genere, Famiglia, Genitorialità, Scuola, Supporto psicologico, Psicologia, Consulenza psicologica, Trento psychologist, Sexuality, Gender, Family, Parenting, School, Psychological support, Psychological counseling">
+
 
     <!-- BOOTSTRAP IMPORT -->
         <!-- CSS only -->
@@ -73,6 +76,9 @@
                             <a href="/index.html#about">Chi sono</a>
                         </li>
                         <li>
+                            <a href="/blog.html">Blog</a>
+                        </li>
+                        <li>
                             <!-- <a data-bs-dismiss="modal" href="#">Le marche</a> -->
                         </li>
                         <li>
@@ -89,6 +95,26 @@
         </div>
     </div>
 
+
+    <!-- MODAL INFOGRAPHIC SESSUALITA -->
+    <div aria-hidden="true" aria-labelledby="infographic-modal-label" class="modal fade infographic-modal" id="infographic-sessualita" tabindex="-1">
+		<div class="modal-dialog modal-fullscreen modal-dialog-scrollable">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fs-5" id="infographic-modal-title">La sessualitá</h1>
+					<button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+                        <i class='bx bx-x'></i>
+                    </button>
+				</div>
+				<div class="modal-body">
+					<iframe src="/assets/infographics/sessualita.pdf" style="width: 100%; height: 100%;"></iframe>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
+				</div>
+			</div>
+		</div>
+    </div>
 
     <!-- MODAL INFOGRAPHIC SONNO -->
     <div aria-hidden="true" aria-labelledby="infographic-modal-label" class="modal fade infographic-modal" id="infographic-sonno" tabindex="-1">
@@ -234,6 +260,9 @@
                             </li>
                             <li>
                                 <a href="index.html#about">Chi sono</a>
+                            </li>
+                            <li>
+                                <a href="blog.html">Blog</a>
                             </li>
                         </div>
                         <div class="right">
@@ -584,6 +613,11 @@
                     </div>
                 </div>
             </div> -->
+            <div class="section-content centered">
+                <div class="section-block1 d-flex flex-row">
+                    <button class="btn btn-secondary me-3" data-bs-toggle="modal" data-bs-target="#infographic-sessualita">Infografica</button>
+                </div>
+            </div>
         </div>
     </section>
 
