--- a/index-en.html
+++ b/index-en.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dott.ssa Aurora Belfanti, Psicologa a Trento e online</title>
+    <meta name="description" content="Are you looking for a psychologist in Trento to talk about sexuality, gender, family, parenting, or school? I'm here for you. I offer personalized psychological support services for adults, adolescents, and students in Italian, English, and other foreign languages.">
+    <meta name="keywords" content="Psicologa a Trento, Psicologa in Trentino, Sessualità, Genere, Famiglia, Genitorialità, Scuola, Supporto psicologico, Psicologia, Consulenza psicologica, Trento psychologist, Sexuality, Gender, Family, Parenting, School, Psychological support, Psychological counseling">
+
 
     <!-- BOOTSTRAP IMPORT -->
         <!-- CSS only -->
