--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dott.ssa Aurora Belfanti, Psicologa a Trento e online</title>
+    <title>Dott.ssa Aurora Belfanti, Psicologa Trento, Trentino ed online</title>
+    <meta name="description" content="Cerchi una psicologa a Trento e Trentino per parlare di sessualità, genere, famiglia, lavoro, genitorialità o scuola? Sono qui per te. Offro servizi di supporto psicologico personalizzato per adulti, adolescenti e studenti in italiano, inglese ed altre lingue straniere. Questa sezione del sito contiene informationi ed articoli relativi a pratiche psicologiche e suggerimenti, spunti di lettura, per consoscersi meglio.">
+    <meta name="keywords" content="Psicologa a Trento, Psicologa in Trentino, Sessualità, Genere, Famiglia, Genitorialità, Scuola, Supporto psicologico, Psicologia, Consulenza psicologica, Trento psychologist, Sexuality, Gender, Family, Parenting, School, Psychological support, Psychological counseling">
+
 
     <!-- BOOTSTRAP IMPORT -->
         <!-- CSS only -->
@@ -69,6 +72,9 @@
                         </li>
                         <li>
                             <a href="#about">Chi sono</a>
+                        </li>
+                        <li>
+                            <a href="/blog.html">Blog</a>
                         </li>
                         <li>
                             <a href="#contatti" class="btn btn-primary">Contattami</a>
@@ -139,6 +145,9 @@
                             </li>
                             <li class="mobile-menu-link">
                                 <a href="#about">Chi sono</a>
+                            </li>
+                            <li class="mobile-menu-link">
+                                <a href="/blog.html">Blog</a>
                             </li>
                         </div>
                         <div class="right">
