--- a/blog.html
+++ b/blog.html
@@ -233,8 +233,8 @@
                         <h2>Un blog diverso dagli altri</h2>
                         <h4>Una raccolta di temi, contribuzioni e pensieri per stimolare il nostro quotidiano.</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eum deserunt quaerat. Ab qui delectus laboriosam rerum placeat cupiditate suscipit fugit natus dolorem, nisi necessitatibus inventore dolores asperiores ipsa tenetur.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis veritatis reprehenderit iusto possimus quis soluta nihil voluptatum natus, cupiditate ad?</p>
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eum deserunt quaerat. Ab qui delectus laboriosam rerum placeat cupiditate suscipit fugit natus dolorem, nisi necessitatibus inventore dolores asperiores ipsa tenetur.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis veritatis reprehenderit iusto possimus quis soluta nihil voluptatum natus, cupiditate ad?</p> -->
                 </div>
             </div>
         </div>
