--- a/blog.html
+++ b/blog.html
@@ -230,8 +230,8 @@
             <div class="section-content">
                 <div class="section-block1">
                     <div class="section-title">
-                        <h2>Un blog diverso dagli altri</h2>
-                        <h4>Una raccolta di temi, contribuzioni e pensieri per stimolare il nostro quotidiano.</h4>
+                        <h2>Benvenuti sul mio blog!</h2>
+                        <h4>Qui troverete una raccolta di articoli, suggerimenti e notizie utili.</h4>
                     </div>
                     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eum deserunt quaerat. Ab qui delectus laboriosam rerum placeat cupiditate suscipit fugit natus dolorem, nisi necessitatibus inventore dolores asperiores ipsa tenetur.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis veritatis reprehenderit iusto possimus quis soluta nihil voluptatum natus, cupiditate ad?</p> -->
