added pomodoro infographics
added pomodoro infographics

--- a/tematiche-en.html
+++ b/tematiche-en.html
@@ -107,7 +107,7 @@
 					<iframe src="/assets/infographics/sleep.pdf" style="width: 100%; height: 100%;"></iframe>
 				</div>
 				<div class="modal-footer">
-					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Dismiss</button> 
 				</div>
 			</div>
 		</div>
@@ -127,7 +127,7 @@
 					<iframe src="/assets/infographics/breathing.pdf" style="width: 100%; height: 100%;"></iframe>
 				</div>
 				<div class="modal-footer">
-					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Dismiss</button> 
 				</div>
 			</div>
 		</div>
@@ -147,7 +147,7 @@
 					<iframe src="/assets/infographics/orientation.pdf" style="width: 100%; height: 100%;"></iframe>
 				</div>
 				<div class="modal-footer">
-					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Dismiss</button> 
 				</div>
 			</div>
 		</div>
@@ -167,7 +167,7 @@
 					<iframe src="/assets/infographics/goals.pdf" style="width: 100%; height: 100%;"></iframe>
 				</div>
 				<div class="modal-footer">
-					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button> 
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Dismiss</button> 
 				</div>
 			</div>
 		</div>
@@ -187,7 +187,27 @@
 					<iframe src="/assets/infographics/stress-body.pdf" style="width: 100%; height: 100%;"></iframe>
 				</div>
 				<div class="modal-footer">
-					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button>
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Dismiss</button>
+				</div>
+			</div>
+		</div>
+    </div>
+
+    <!-- MODAL INFOGRAPHIC POMODORO -->
+    <div aria-hidden="true" aria-labelledby="infographic-modal-label" class="modal fade infographic-modal" id="infographic-pomodoro-en" tabindex="-1">
+		<div class="modal-dialog modal-fullscreen modal-dialog-scrollable">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fs-5" id="infographic-modal-title">Pomodoro technique</h1>
+					<button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+                        <i class='bx bx-x'></i>
+                    </button>
+				</div>
+				<div class="modal-body">
+					<iframe src="/assets/infographics/pomodoro-en.pdf" style="width: 100%; height: 100%;"></iframe>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Dismiss</button>
 				</div>
 			</div>
 		</div>
@@ -711,7 +731,8 @@
             <div class="section-content centered">
                 <div class="section-block1 d-flex flex-row">
                     <button class="btn btn-secondary me-3" data-bs-toggle="modal" data-bs-target="#infographic-obiettivi">Smart goals</button>
-                    <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-orientamento">Orientation</button>
+                    <button class="btn btn-secondary me-3" data-bs-toggle="modal" data-bs-target="#infographic-orientamento">Orientation</button>
+                    <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-pomodoro-en">Pomodoro Technique</button>
                 </div>
             </div>
         </div>
