--- a/tematiche.html
+++ b/tematiche.html
@@ -216,6 +216,27 @@
 		</div>
     </div>
 
+    <!-- MODAL INFOGRAPHIC POMODORO -->
+    <div aria-hidden="true" aria-labelledby="infographic-modal-label" class="modal fade infographic-modal" id="infographic-pomodoro-it" tabindex="-1">
+		<div class="modal-dialog modal-fullscreen modal-dialog-scrollable">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fs-5" id="infographic-modal-title">Pomodoro technique</h1>
+					<button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+                        <i class='bx bx-x'></i>
+                    </button>
+				</div>
+				<div class="modal-body">
+					<iframe src="/assets/infographics/pomodoro-it.pdf" style="width: 100%; height: 100%;"></iframe>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-primary" data-bs-dismiss="modal" type="button">Chiudi</button>
+				</div>
+			</div>
+		</div>
+    </div>
+
+
     <!-- LANGUAGE MODAL -->
     <div class="modal fade" id="language-modal">
         <div class="modal-dialog">
@@ -750,7 +771,8 @@
             <div class="section-content centered">
                 <div class="section-block1 d-flex flex-row">
                     <button class="btn btn-secondary me-3" data-bs-toggle="modal" data-bs-target="#infographic-obiettivi">Smart goals</button>
-                    <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-orientamento">Orientamento</button>
+                    <button class="btn btn-secondary me-3" data-bs-toggle="modal" data-bs-target="#infographic-orientamento">Orientamento</button>
+                    <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#infographic-pomodoro-it">Pomodoro Technique</button>
                 </div>
             </div>
         </div>
