--- a/index.html
+++ b/index.html
@@ -259,9 +259,8 @@
                 <div class="section-block1">
                     <!-- <div class="chip-basic">Benvenuto, e benvenuta!</div> -->
                     <h2 class="section-title">Consulenza psicologica</h2>
-                    <p class="text-left">Ti é mai capitato di trovarti in una situazione difficile o dolorosa? Oppure di sentire il bisogno di un cambiamento ma di non riuscire ad identificare bene la direzione verso cui andare? É mai successo che ti chiedessi: Cosa voglio veramente? Come sto davvero?</p>
-                    <p class="text-left">Le domande che potrei aggiungere a questa lista sono molte, e certamente, tutti noi prima o poi, ci troviamo a porcele. A volte potremmo sentire il bisogno o il desiderio di condividere queste domande o questi pezzetti di sentiero più complessi con uno psicologo, una persona esterna al nostro ambiente, che ci possa ascoltare senza pregiudizi e senza giudicarci.
-                        <br>Uno spazio libero, aperto e sicuro.
+                    <p class="text-left">Ti é mai capitato di trovarti in una situazione difficile o dolorosa? Oppure di sentire il bisogno di un cambiamento ma di non riuscire ad identificare bene la direzione verso cui andare?</p>
+                    <p class="text-left">Le domande che possiamo porci sono molte e non é sempre semplice capirle. A volte potremmo sentire il bisogno o il desiderio di condividere queste domande o questi pezzetti di sentiero più complessi con uno psicologo, una persona esterna al nostro ambiente, che ci possa ascoltare senza pregiudizi e senza giudicarci.
                     </p>
                     <p class="text-left">Ecco, questo è quello che faccio nel mio lavoro: accompagnarti per un pezzetto di quel percorso sul quale stai camminando ed aiutarti a proseguire cercando di capire meglio cio’ che accade dentro e fuori.
                     </p>
@@ -392,6 +391,14 @@
                             <a class="btn btn-primary-outline" href="tematiche.html#estero">Vai alla sezione</a>
                         </div>
                     </div>
+                    <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
+                        <div class="card-body">
+                            <i class='bx bx-child'></i>
+                            <h5 class="card-title">Consulenza tecnica di parte</h5>
+                            <p class="card-text">Consulenza tecnica di parte</p>
+                            <a class="btn btn-primary-outline" href="tematiche.html#consulenza-tecnica">Vai alla sezione</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="section-content centered">
@@ -424,11 +431,11 @@
                         <img src="/assets/profile-pic.jpg" alt="profile-pic">
                     </div>
                     <h2 class="section-title">Qualcosa su di me</h2>
-                    <p class="text-left">Sono psicologa e psicoterapeuta in formazione presso <a href="https://www.icp-italia.it/it">l’Institute of Constructivist Psychology di Padova</a>.
-                        Dopo poco più di una decade vissuta fuori dalla mia città natale, sono ritornata a Trento, dove svolgo la professione di psicologa, offrendo consulenze individuali e di coppia in studio ed online.
+                    <p class="text-left">Sono psicologa e psicoterapeuta iscritta all'ordine degli Psicologi del Trentino-Alto Adige (N. 1290), in formazione presso <a href="https://www.icp-italia.it/it">l’Institute of Constructivist Psychology di Padova</a>, ed offro consulenze psicologiche a Trento e online in lingua italiana e inglese.
                     </p>
-                    <p class="text-left">Prima di tornare tra le mie amate montagne, ho lavorato per alcuni anni alla <a href="https://www.vub.be/en">Vrije Universiteit Brussel (VUB)</a> come psicologa, offrendo supporto psicologico a studenti e ricercatori. 
+                    <p class="text-left">Prima di trasferirmi a Trento, ho lavorato alla <a href="https://www.vub.be/en">Vrije Universiteit Brussel (VUB)</a> come psicologa, offrendo supporto psicologico a studenti e ricercatori. 
                         E’ sicuramente stata un’esperienza arricchente: occupandomi della comunità internazionale ho avuto occasione di incontrare e offrire consulenza psicologica a persone provenienti da tutto il mondo. Oltre che occuparmi di percorsi di supporto individuale, sono stata trainer di diversi percorsi di gruppo, tra cui training basati sulla Mindfulness e Self-Compassion e sull’ ACT (Acceptance and Commitment Therapy), e training mirati ad affrontare la paura del fallimento e le situazioni di blocco.
+                        Contemporaneamente, ho lavorato, e tutt’ora collaboro, presso un centro terapeutico a Bruxelles, offrendo consulenze soprattutto ad expat (CATP).
                     </p>
                     <p class="text-left">
                         Prima di trasferirmi in Belgio, ho collaborato con alcune cooperative trentine, dove ho svolto percorsi di educazione alla sessualità e all’affettività per bambini ed adolescenti.
