--- a/tematiche.html
+++ b/tematiche.html
@@ -482,6 +482,14 @@
                         <a class="btn btn-primary-outline" href="#estero">Vai alla sezione</a>
                     </div>
                 </div>
+                <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
+                    <div class="card-body">
+                        <i class='bx bx-child'></i>
+                        <h5 class="card-title">Consulenza tecnica di parte</h5>
+                        <p class="card-text">Consulenza tecnica di parte</p>
+                        <a class="btn btn-primary-outline" href="#consulenza-tecnica">Vai alla sezione</a>
+                    </div>
+                </div>
             </div>
             <div class="section-content centered">
                 <div class="section-block1">
@@ -500,7 +508,7 @@
                     <div class="chip-secondary"><i class='bx bxs-tired'></i> Stress, sonno, ansia</div>
                     <h2 class="section-title">Ansia, Stress, Problemi del sonno, Attacchi di panico</h2>
                     <p>
-                        Lo stress è una reazione naturale del nostro corpo-mente che diventa problematica quando si cronicizza o quando arriva ad avere una così forte intensità da diventare fonte di disagio per la nostra vita quotidiana.
+                        Lo stress è una reazione naturale che diventa problematica quando si cronicizza o quando arriva ad avere una così forte intensità da diventare fonte di disagio per la nostra vita quotidiana.
                         Vuoi qualche informazione in più? Clicca sulle infografiche qui sotto!
                     </p>
                     <p>
@@ -585,11 +593,12 @@
                 <div class="section-block1">
                     <div class="chip-secondary"><i class='bx bxs-dislike' ></i> Situazioni difficili e bloccanti</div>
                     <h2 class="section-title">Situazioni difficili e bloccanti</h2>
-                    <p>Molte persone iniziano un percorso di consulenza psicologica proprio perchè si trovano in situazioni difficili, dove si possono sentire bloccati o provare molta sofferenza. 
+                    <p>Molte persone iniziano un percorso di consulenza psicologica proprio perchè si trovano in situazioni difficili, dove si possono sentire bloccate o in difficoltà. 
 
-                        Sono tante le situazioni della vita in cui possiamo sentirci soli o dove il dolore diventa opprimente. Sono situazioni comuni a molti di noi, come il divorzio, un lutto, difficoltà nel proprio lavoro o percorso formativo, difficoltà in relazioni significative.
+                        Sono tante le situazioni della vita in cui possiamo sentirci in difficoltà, sono situazioni comuni a molti di noi, come il divorzio, un lutto, difficoltà nel proprio lavoro, percorso formativo, o nelle relazioni importanti della nostra vita.
                         
                         Il sostegno psicologico può esserti d’aiuto per comprendere meglio dove sei, quali sono i meccanismi in atto, come prenderti cura di te e di chi ti sta intorno e per scoprire strade alternative.
+                        
                         </p>
                 </div>
                 <div class="section-block2">
@@ -652,7 +661,7 @@
                     <p>Cosa significa?
                         Acronimo che sta per Lesbiche, Gay, Bisessuali, Transgender, Queer, Intersex, Asessuali e + (inteso a voler comprendere tutte le altre forme di orientamento sessuale o identità di genere non rappresentate dalle lettere precedenti).
                         Ci sono molti altri acronimi che potremmo utilizzare. 
-                        È certamente comune avere dubbi sul proprio orientamento sessuale, relazionale, romantico o sulla propria identità di genere, oppure incontrare delle difficoltà rispetto alla relazione con gli altri su queste tematiche. Aprirsi con uno psicologo può aiutarci ad esplorare non solo noi stessi ma anche noi in relazione agli altri o ad un contesto sociale con il quale ci confrontiamo quotidianamente.                                                
+                        È certamente comune avere dubbi sul proprio orientamento sessuale, relazionale, romantico o sulla propria identità di genere, oppure incontrare delle difficoltà rispetto alla relazione con gli altri su queste tematiche. Iniziare un percorso con uno psicologo può aiutarci ad esplorare non solo noi stessi ma anche noi in relazione agli altri o ad un contesto sociale con il quale ci confrontiamo quotidianamente.                                                
                     </p>
                 </div>
                 <div class="section-block2">
@@ -690,8 +699,8 @@
                     <div class="chip-secondary"><i class='bx bxs-brain'></i> Pensieri ingombranti</div>
                     <h2 class="section-title">Pensieri ingombranti</h2>
                     <p>
-                        Possiamo smettere di pensare? È molto difficile fermare la nostra mente e a volte il flusso costante di pensieri può essere fonte di sofferenza. Ci sono pensieri che ci siamo ripetuti così tante volte che ormai ci sembrano l’unica verità possibile.
-                        Attraverso un percorso di consulenza psicologica puoi imparare tecniche che ti aiuteranno a rapportarti con questi pensieri automatici in modi diversi e a guardare agli stessi da diverse prospettive.                        
+                        Possiamo smettere di pensare? È molto difficile fermare la nostra mente e a volte il flusso costante di pensieri può essere fonte di difficoltà. Ci sono pensieri che ci siamo ripetuti così tante volte che ormai ci sembrano l’unica verità possibile.
+                        Attraverso un percorso di consulenza psicologica è possibile scoprire modi diversi di guardare a questi pensieri, aprendoci a nuove prospettive.                        
                     </p>
                 </div>
                 <div class="section-block2">
@@ -795,6 +804,24 @@
 
                         Abiti in Trentino e vuoi un appuntamento in studio? Contattami via <a href="index.html#contatti">email</a>.
 
+                    </p>
+                </div>
+                <div class="section-block2">
+                    <div class="img"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CONSULENZE TECNICHE DI PARTE -->
+    <section id="consulenza-tecnica">
+        <div class="section-wrapper">
+            <div class="section-content left">
+                <div class="section-block1">
+                    <div class="chip-secondary"><i class='bx bx-child'></i> Consulenze tecniche di parte</div>
+                    <h2 class="section-title">Consulenze tecniche di parte</h2>
+                    <p>
+                        Offro consulenze tecniche di parte prevalentemente sul territorio del tribunale di Trento e Rovereto.
                     </p>
                 </div>
                 <div class="section-block2">
